@@ -3,7 +3,7 @@
 Plugin Name: Flexo Archives
 Description: Displays archives as a list of years that expand when clicked
 Author: Heath Harrelson
-Version: 1.0.7
+Version: 1.0.8
 Plugin URI: http://www.pointedstick.net/heath/flexo-archives-widget
 Author URI: http://www.pointedstick.net/heath/
 */
@@ -70,18 +70,11 @@ function flexo_widget_archives_init() {
 	// Helper function to print first bit of year list
 	function flexo_year_start ($year = '') {
 		// Ugly strings used in building the tags
-		$year_list_a = '<ul><li><a href="';
-		$year_list_b = '" class="flexo-link" id="flexo-';
-		$year_list_c = '" title="Year ';
-		$year_list_d = ' archives">';
-		$year_list_e = '</a><ul class="flexo-list">';
+		$year_start = '<ul><li><a href="%s" class="flexo-link" ';
+		$year_start .= 'id="flexo-%s"  title="Year %s archives">';
+		$year_start .= '%s</a><ul class="flexo-list">';
 
-		// All together now!
-		$whole_thing = $year_list_a . get_year_link($year) . $year_list_b;
-		$whole_thing .= $year . $year_list_c . $year . $year_list_d;
-		$whole_thing .= $year . $year_list_e;
-
-		return $whole_thing;
+		return sprintf($year_start, get_year_link($year), $year, $year, $year);
 	}
 
 	// Perform database query to get archives.  Archives are sorted in
